# aws-sentiment-mlops-pipeline

./: LICENSE  README.md  pyproject.toml
infrastructure/: cloudformation.yaml
lambda/: app.py
src/sentiment/: aws_deploy.py  inference.py  sagemaker_train.py  train.py
tests/: test_lambda.py  test_local.py  test_model.py  test_sagemaker.py
